# PolyBenchC-4.2.1

./: .gitignore  CMakeLists.txt
datamining/correlation/: CMakeLists.txt  correlation.cpp  correlation.h
datamining/covariance/: CMakeLists.txt  covariance.c  covariance.cpp  covariance.h
linear-algebra/: CMakeLists.txt
linear-algebra/blas/: CMakeLists.txt
linear-algebra/blas/gemm/: CMakeLists.txt  gemm.c  gemm.cpp  gemm.h
linear-algebra/blas/gemver/: CMakeLists.txt  gemver.c  gemver.cpp  gemver.h
linear-algebra/blas/gesummv/: CMakeLists.txt  gesummv.c  gesummv.cpp  gesummv.h
linear-algebra/blas/symm/: CMakeLists.txt  symm.c  symm.cpp  symm.h
linear-algebra/blas/syr2k/: CMakeLists.txt  syr2k.c  syr2k.cpp  syr2k.h
linear-algebra/blas/syrk/: CMakeLists.txt  syrk.c  syrk.cpp  syrk.h
linear-algebra/blas/trmm/: CMakeLists.txt  trmm.c  trmm.cpp  trmm.h
linear-algebra/kernels/2mm/: 2mm.c  2mm.cpp  2mm.h  CMakeLists.txt
linear-algebra/kernels/3mm/: 3mm.c  3mm.cpp  3mm.h  CMakeLists.txt
linear-algebra/kernels/atax/: CMakeLists.txt  atax.c  atax.cpp  atax.h
linear-algebra/kernels/bicg/: CMakeLists.txt  bicg.c  bicg.cpp  bicg.h
linear-algebra/kernels/doitgen/: CMakeLists.txt  doitgen.c  doitgen.cpp  doitgen.h
linear-algebra/kernels/mvt/: CMakeLists.txt  mvt.c  mvt.cpp  mvt.h
linear-algebra/solvers/cholesky/: CMakeLists.txt  cholesky.cpp  cholesky.h
linear-algebra/solvers/durbin/: CMakeLists.txt  durbin.c  durbin.cpp  durbin.h
linear-algebra/solvers/gramschmidt/: CMakeLists.txt  gramschmidt.c  gramschmidt.cpp  gramschmidt.h
linear-algebra/solvers/lu/: CMakeLists.txt  lu.cpp  lu.h  peeled.txt
linear-algebra/solvers/ludcmp/: CMakeLists.txt  ludcmp.cpp  ludcmp.h
linear-algebra/solvers/trisolv/: CMakeLists.txt  trisolv.c  trisolv.cpp  trisolv.h
medley/deriche/: CMakeLists.txt  deriche.c  deriche.cpp  deriche.h
medley/floyd-warshall/: CMakeLists.txt  floyd-warshall.cpp  floyd-warshall.h
medley/nussinov/: CMakeLists.txt  nussinov.cpp  nussinov.h
stencils/adi/: CMakeLists.txt  adi.c  adi.cpp  adi.h
stencils/fdtd-2d/: CMakeLists.txt  fdtd-2d.c  fdtd-2d.cpp  fdtd-2d.h
stencils/heat-3d/: CMakeLists.txt  heat-3d.c  heat-3d.cpp  heat-3d.h
stencils/jacobi-1d/: CMakeLists.txt  jacobi-1d.cpp  jacobi-1d.h
stencils/jacobi-2d/: CMakeLists.txt  jacobi-2d.c  jacobi-2d.cpp  jacobi-2d.h
stencils/seidel-2d/: CMakeLists.txt  seidel-2d.c  seidel-2d.cpp  seidel-2d.h
utilities/: CMakeLists.txt  polybench.h  verif.py  verif.sh
